--- a/map.ipynb
+++ b/map.ipynb
@@ -9,14 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import descartes\n",
     "import geopandas as gpd\n",
     "import warnings\n",
     "from shapely.geometry import Point, LineString\n",
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +49,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,66 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>No</th>\n",
-       "      <th>Nama</th>\n",
-       "      <th>centroid</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tes</td>\n",
-       "      <td>POINT (107.1403271 -6.661787050000001)</td>\n",
-       "      <td>POINT (107.14033 -6.66179)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Tos</td>\n",
-       "      <td>POINT (107.89032710000001 -6.91178705)</td>\n",
-       "      <td>POINT (107.89033 -6.91179)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   No Nama                                centroid                    geometry\n",
-       "0   1  Tes  POINT (107.1403271 -6.661787050000001)  POINT (107.14033 -6.66179)\n",
-       "1   2  Tos  POINT (107.89032710000001 -6.91178705)  POINT (107.89033 -6.91179)"
-      ]
-     },
-     "execution_count": 241,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('shape/tollpoint.csv')\n",
     "df['gerbang'] = [Point(xy) for xy in zip(df['glong'],df['glat'])]\n",
@@ -157,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x18e27749090>"
+       "<matplotlib.legend.Legend at 0x1e4fba04d90>"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -191,18 +132,11 @@
     "plot_centroid.plot(ax=ax, markersize=40, color='purple')\n",
     "plt.legend(prop = {\"size\":15})"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tambah lintas / garis Jalan Tol"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +155,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+    "hash": "3480259307635c062ecc0ef80b7049a48e38ce538eec6cbc2b77840859ba637c"
    }
   }
  },
